# social-video-automation

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: API.md
scripts/: schedule_content.py
src/social_video_automation/: __init__.py  cli.py
src/social_video_automation/ai_services/: __init__.py  base.py  chatgpt.py  gemini.py  grok.py  orchestrator.py
src/social_video_automation/config/: __init__.py  settings.py
src/social_video_automation/content/: __init__.py  pipeline.py
src/social_video_automation/social/: __init__.py  ayrshare.py  base.py  late.py  manager.py
src/social_video_automation/templates/: __init__.py  content_formulas.py  platform_templates.py  viral_hooks.py
src/social_video_automation/video/: __init__.py  base.py  creatomate.py  heygen.py  manager.py
tests/: __init__.py  test_ai_services.py  test_social.py  test_video.py
